src/app/geographic/places/places.component.scss
.content-trip-places {
  position: absolute;
  width:100%;
  top: 0;
  height:100vh;
  .places-sidebar,
  .places-detail {
    height: 100%;
    
  }

  .places-sidebar {
    position: absolute;
    padding: 13px 0px 0;
    background:white;
    width: 389px;
    padding-top: 30px;
  }
  @import '../geographic.scss';

  .cnt-places-header{
    @include header();
    &::before{
       @include pseudo($height: 161px);
    }
    i{
      position: relative;
      z-index: 3;
      color: white;
      font-size: 21px;
      cursor:pointer;
    }
    h1{
      @include font-title();
      padding: 12px;
    }
  }
  .places-detail {
    position: absolute;
    left: 389px;
    padding: 0;
    right: 0;
  }
  .cnt-places-added{
    margin-top:36px;

    .place-added{
      padding: 12px;
      background: #a6adb7;
      color: #FFF;
      position:relative;
      display: flex;
      align-items:center;
      transition:all 150ms ease;

      &:hover{
        background: #8b939d;
        .remove-place, .add-place {
          visibility:visible;
          opacity:1;
        }
      }

      &:not(:last-child):after{ 
        content: "";
        position: absolute;
        z-index: 9;
        width: 2px;
        border-left-style: dotted;
        border-left-width: 3.5px;
        border-left-color: white;
        height: 20px;
        bottom: -10px;
        left: 22px;
      }

      .remove-place{
        margin-left: auto;
        cursor: pointer;
        visibility:hidden;
        opacity:0;
        transition:all 150ms ease;
      }
        
      .add-place {
        transform: rotate(45deg);
        transition: all 150ms ease;
        margin-left: auto;
        cursor: pointer;
        visibility:hidden;
        opacity:0;
      }
      
      .title-place-added{
        font-size: 13.5px;
      }

      .fa-exchange-alt {
        &:before{
          margin: -1.7em -1em;
          position: absolute;
          transform: rotate(90deg);
          font-weight: 300;
          font-size: 1.5em;
          cursor: pointer;
        }
      }

      .number-radius {
        border-radius: 50%;
        border: solid 1px;
        padding: 0px 7px;
        vertical-align: middle;
        text-align: center;
        margin-right: 5px;
      }
    }
   
  }
  
}

